--- a/GameArchitectureAI.vcxproj
+++ b/GameArchitectureAI.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="Fisherman.cpp" />
     <ClCompile Include="FishingState.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MarketState.cpp" />
     <ClCompile Include="RestingState.cpp" />
     <ClCompile Include="TimeManager.cpp" />
   </ItemGroup>
@@ -139,6 +140,7 @@
     <ClInclude Include="Fisherman.h" />
     <ClInclude Include="FishingState.h" />
     <ClInclude Include="main.h" />
+    <ClInclude Include="MarketState.h" />
     <ClInclude Include="RestingState.h" />
     <ClInclude Include="State.h" />
     <ClInclude Include="TimeManager.h" />
