--- a/GameArchitectureAI.vcxproj
+++ b/GameArchitectureAI.vcxproj
@@ -128,29 +128,33 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BaseGameEntity.cpp" />
+    <ClCompile Include="EntityManager.cpp" />
     <ClCompile Include="Fisherman.cpp" />
     <ClCompile Include="FishingState.cpp" />
     <ClCompile Include="FishSouvenirShopState.cpp" />
     <ClCompile Include="LemonadeStandState.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MarketState.cpp" />
-    <ClCompile Include="Restaurant.cpp" />
     <ClCompile Include="RestaurantState.cpp" />
     <ClCompile Include="RestingState.cpp" />
+    <ClCompile Include="Telegram.cpp" />
     <ClCompile Include="TimeManager.cpp" />
     <ClCompile Include="WalkingState.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BaseGameEntity.h" />
+    <ClInclude Include="EntityManager.h" />
     <ClInclude Include="Fisherman.h" />
     <ClInclude Include="FishingState.h" />
     <ClInclude Include="FishSouvenirShopState.h" />
     <ClInclude Include="LemonadeStandState.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="MarketState.h" />
+    <ClInclude Include="MessageDispatcher.h" />
     <ClInclude Include="RestaurantState.h" />
     <ClInclude Include="RestingState.h" />
     <ClInclude Include="State.h" />
+    <ClInclude Include="Telegram.h" />
     <ClInclude Include="TimeManager.h" />
     <ClInclude Include="WalkingState.h" />
   </ItemGroup>
