--- a/GameArchitectureAI.vcxproj.filters
+++ b/GameArchitectureAI.vcxproj.filters
@@ -57,17 +57,20 @@
     <ClCompile Include="LemonadeStandState.cpp">
       <Filter>Resource Files\states</Filter>
     </ClCompile>
-    <ClCompile Include="Restaurant.cpp">
-      <Filter>Resource Files\states</Filter>
-    </ClCompile>
     <ClCompile Include="RestaurantState.cpp">
       <Filter>Resource Files\states</Filter>
     </ClCompile>
-    <ClCompile Include="WalkingState.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="FishSouvenirShopState.cpp">
       <Filter>Resource Files\states</Filter>
+    </ClCompile>
+    <ClCompile Include="WalkingState.cpp">
+      <Filter>Resource Files\states</Filter>
+    </ClCompile>
+    <ClCompile Include="EntityManager.cpp">
+      <Filter>Resource Files\core</Filter>
+    </ClCompile>
+    <ClCompile Include="Telegram.cpp">
+      <Filter>Resource Files\entity</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -106,6 +109,15 @@
     </ClInclude>
     <ClInclude Include="FishSouvenirShopState.h">
       <Filter>Header Files\states</Filter>
+    </ClInclude>
+    <ClInclude Include="EntityManager.h">
+      <Filter>Header Files\core</Filter>
+    </ClInclude>
+    <ClInclude Include="MessageDispatcher.h">
+      <Filter>Header Files\core</Filter>
+    </ClInclude>
+    <ClInclude Include="Telegram.h">
+      <Filter>Header Files\entity</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
