--- a/GameArchitectureAI.vcxproj
+++ b/GameArchitectureAI.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="MessageDispatcher.cpp" />
     <ClCompile Include="RestaurantState.cpp" />
     <ClCompile Include="RestingState.cpp" />
+    <ClCompile Include="SocializeState.cpp" />
     <ClCompile Include="Telegram.cpp" />
     <ClCompile Include="TimeManager.cpp" />
     <ClCompile Include="WalkingState.cpp" />
@@ -154,6 +155,7 @@
     <ClInclude Include="MessageDispatcher.h" />
     <ClInclude Include="RestaurantState.h" />
     <ClInclude Include="RestingState.h" />
+    <ClInclude Include="SocializeState.h" />
     <ClInclude Include="State.h" />
     <ClInclude Include="Telegram.h" />
     <ClInclude Include="TimeManager.h" />
